--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,19 +3,39 @@
 # Specification (technical, formal):
 # https://packaging.python.org/en/latest/specifications/pyproject-toml/
 
+[tool.poetry]
+name = "sweagent"
+version = "0.1.0"  # Adjust as necessary
+description = "The official SWE-agent package - an open source Agent Computer Interface for running language models as software engineers."
+authors = [
+  "Carlos E. Jimenez <carlosej@princeton.edu>",
+  "John Yang <byjohnyang@gmail.com>"
+]
+license = "MIT"  # Specify your license
+readme = "README.md"
+homepage = "https://swe-agent.com"
+repository = "http://github.com/princeton-nlp/SWE-agent"
+documentation = "https://github.com/princeton-nlp/SWE-agent"
+classifiers = [
+  "Operating System :: OS Independent",
+  "Intended Audience :: Developers",
+  "License :: OSI Approved :: MIT License",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3 :: Only",
+]
+
 
 # Choosing a build backend:
 [build-system]
 requires = ["setuptools"]  # REQUIRED if [build-system] table is used
 build-backend = "setuptools.build_meta"  # If not defined, then legacy behavior can happen.
 
-
 [project]
 name = "sweagent"
 dynamic = ["version", "dependencies"]
 description = "The official SWE-agent package - an open source Agent Computer Interface for running language models as software engineers."
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 license = {file = "LICENSE"}
 keywords = ["nlp", "agents", "code"]
 authors = [
@@ -32,7 +52,7 @@ classifiers = [
   "Intended Audience :: Developers",
   # Pick your license as you wish
   "License :: OSI Approved :: MIT License",
-  "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3 :: Only",
 ]
 
@@ -98,8 +118,8 @@ exclude = [
 line-length = 88
 indent-width = 4
 
-# Assume Python 3.8
-target-version = "py38"
+# Assume Python 3.10
+target-version = "py310"
 
 [tool.ruff.lint]
 # Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
